Replace toEntity mapper for create milk method